<resources>
    <string name="climate_controls_title">Climate &amp; Controls</string>
    <string name="climate_driver">Driver</string>
    <string name="climate_passenger">Passenger</string>
    <string name="more_climate">More Climate</string>
    <string name="app_name">CarSystemUI</string>
    <string name="car_wallpaper_description">Car wallpaper</string>
    <string name="navigation_app_list">App list</string>
    <string name="navigation_brand">IVI</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_control_center">Control Center</string>
    <string name="navigation_call">Call</string>
    <string name="navigation_wifi">Wi-Fi</string>
    <string name="navigation_bluetooth">Bluetooth</string>
    <string name="navigation_connected">Connected</string>
    <string name="navigation_not_connected">Not connected</string>
    <string name="navigation_disabled">Disabled</string>
    <string name="navigation_audio_muted">Audio muted</string>
    <string name="navigation_disconnected">Disconnected</string>
    <string name="navigation_unavailable">Unavailable</string>
    <string name="navigation_connectivity_description">%1$s %2$s</string>
    <string name="control_center_title">Control Center</string>
    <string name="control_volume">Volume</string>
    <string name="control_brightness">Brightness</string>
    <string name="control_close">Close Control Center</string>
    <string name="climate_waiting">Connecting to climate…</string>
    <string name="climate_unavailable">HVAC data unavailable</string>
    <string name="climate_cabin_value">Cabin %1$s</string>
    <string name="climate_left">Left</string>
    <string name="climate_right">Right</string>
    <string name="climate_single_zone">Cabin temperature</string>
    <string name="climate_ac">A/C</string>
    <string name="temperature_decrease">Decrease temperature</string>
    <string name="temperature_increase">Increase temperature</string>
</resources>
